...
          child: Icon(
            Icons.chevron_left,
            color: Color(0xFF009195),
          ),
        ),
        title: Text("BTC to USD",
            key: Key('btcToUsdTitle'),
            style: TextStyle(
              color: Color(0xFF009195),
            )),
      ),
      body: Center(
          child: Column(
...
